--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,10 @@
 .App-link {
   color: #61dafb;
 }
+.catherine{
+  background-color: violet;
+  color: red;
+}
 
 @keyframes App-logo-spin {
   from {
